--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -1,15 +1,11 @@
 <template>
-    <div class="slide" click.trigger="mark_face($event)"id="full-size-photo">
+    <div class="slide" click.trigger="mark_face($event)" id="full-size-photo">
         <div class="slide" click="mark_face($event)" css="height: ${slide.height}px; width:${slide.width}px;">
             <img src="${slide.src}" height="${slide.height}" width="${slide.width}" />
-            <button dir="rtl" class="face" repeat.for="face of faces"
-                 click.trigger="handle_face(face, $event, $index)" 
-                 interact-draggable 
-                 interact-dragmove.delegate="dragmove(face, $event)" 
-                 interact-dragstart.delegate="dragstart(face, $event)" 
-                 interact-dragend.delegate="dragend(face, $event)"
-                 style.bind="face_location(face)"
-                 title.bind="face.name">
+            <button class="highlighter" click.trigger="toggle_highlighting($event)"></button>
+            <button dir="rtl" class="face" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)" interact-draggable
+                interact-dragmove.delegate="dragmove(face, $event)" interact-dragstart.delegate="dragstart(face, $event)" interact-dragend.delegate="dragend(face, $event)"
+                style.bind="face_location(face)" title.bind="face.name"><span if.bind="highlighting" style="color: lightblue;">${face.name}</span>
             </button>
         </div>
     </div>
@@ -27,9 +23,24 @@
             position: absolute;
         }
 
+        .slide.highlight-faces button.face {
+            border-color: rgba(255, 255, 0, 0.9);
+            opacity: 0.5;
+        }
+
         button.face:hover {
             border-color: rgba(255, 255, 0, 0.9);
             opacity: 0.5;
+        }
+
+        .highlighter {
+            left: 0px;
+            top: 0px;
+            width: 30px;
+            height: 30px;
+            position: absolute;
+            background-color: rgba(0,0,0,0);
+            border: none;
         }
     </style>
 
