--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -5,7 +5,7 @@
             <button class="highlighter" click.trigger="toggle_highlighting($event)"></button>
             <button dir="rtl" class="face" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)" interact-draggable
                 interact-dragmove.delegate="dragmove(face, $event)" interact-dragstart.delegate="dragstart(face, $event)" interact-dragend.delegate="dragend(face, $event)"
-                style.bind="face_location(face)" title.bind="face.name"><span if.bind="highlighting" style="color: lightblue;">${face.name}</span>
+                style.bind="face_location(face)" title.bind="face.name"><span if.bind="highlighting" style="color: white;">${face.name}</span>
             </button>
         </div>
     </div>
