--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -36,8 +36,8 @@
         .highlighter {
             left: 0px;
             top: 0px;
-            width: 30px;
-            height: 30px;
+            width: 32px;
+            height: 32x;
             position: absolute;
             background-color: rgba(0,0,0,0);
             border: none;
