--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -9,9 +9,9 @@
                 <div>
                     <p style="align-content: right;padding:20px;font-size:120%;" dir="rtl">
                         ${'photos.sharing' | t}
-                        <strong>photos@gbstories.org<strong>
-                        </p>
-                    </div>
+                        <strong>photos@${host_name}<strong>
+                    </p>
+                </div>
                 <div class="panel-body">
                     <section class="container">
 
@@ -37,9 +37,9 @@
                         <h3 style="margin-left:140px;width:250px;">${'photos.upload-in-progress' | t}</h3>
                     </div>
                     <div if.bind="upload_finished" style="margin-left:130px;width:350px;">
-                        <h3 if.bind="number_uploaded" style="color:green;">${number_uploaded} ${'photos.photos-uploaded' | t}</h3>
+                        <h3 if.bind="number_uploaded" class="success">${number_uploaded} ${'photos.photos-uploaded' | t}</h3>
                         <h3 if.bind="number_duplicates>0">${number_duplicates} ${'photos.photos-duplicate' | t} </h3>
-                        <h3 if.bind="failed.length>0" style="color:red;">${failed.length} ${'photos.photos-failed' | t} </h3>
+                        <h3 if.bind="failed.length>0" class="errors">${failed.length} ${'photos.photos-failed' | t} </h3>
                         <ul class="errors">
                             <li repeat.for="f of failed">
                                 ${f}
@@ -51,6 +51,12 @@
         </div>
     </div>
     <style>
+        h3.success {
+            color:green;
+        }
+        h3.errors {
+            color:red;
+        }
         ul.errors {
             list-style-type: none;
             color: red;
