--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -6,11 +6,11 @@
             <span if.bind="user.privileges.DEVELOPER">${member.member_info.id}</span>
             </h3>
         </div>
-        <div class="row slide-list" interact-draggable interact-dragend.delegate="shift_photos($event)">
+        <div class="row slide-list" >
 
             <div class="slide-control next" click.trigger="next_slide($event)"><i class="fa fa-chevron-right fa-3x"></i></div>
             <div class="slide-control prev" click.trigger="prev_slide($event)"><i class="fa fa-chevron-left fa-3x"></i></div>
-            <a repeat.for="slide of member.slides" click.trigger="photo_clicked(slide)" dblclick.trigger="photo_clicked(slide)">
+            <a repeat.for="slide of member.slides" click.trigger="photo_clicked(slide)" interact-draggable interact-dragend.delegate="shift_photos(slide, $event)">
                  <img class="slide-photo" src="${slide.src}" style="float:right;" />
             </a>
         </div>
