dates. some styling in family connections.

--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -172,9 +172,13 @@
             border-radius: 50%;
         }
 
+        ul.family a {
+            position: relative;
+        }
         ul.family span {
-            margin: 0;
-            padding: 0
+            position: absolute;
+            top: 7px;
+            right: 34px;
         }
 
         div.story-panel {
