--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -68,7 +68,7 @@
                     <input type="text" class="form-control" id="birth_place" t="[placeholder]members.birth-place" value.bind="member.member_info.PlaceOfBirth">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="date_of_death" t="[placeholder]members.date-of-death" value.bind="member.member_info.date_of_death">
+                    <input type="text" class="form-control" id="date_of_death" t="[placeholder]members.date-of-death" value.bind="member.member_info.date_of_death_str">
                 </div>
             </div>
             <!--The right wing of the form-->
@@ -87,7 +87,7 @@
                     <input type="text" class="form-control" id="DateOfBirth" disabled.bind="true" value.bind="member.member_info.DateOfBirth">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="birth_date" t="[placeholder]members.date-of-birth" value.bind="member.member_info.birth_date">
+                    <input type="text" class="form-control" id="date_of_birth" t="[placeholder]members.date-of-birth" value.bind="member.member_info.date_of_birth_str">
                 </div>
                 <div class="form-group">
                     <input type="text" class="form-control" id="nick_name" t="[placeholder]members.nick-name" value.bind="member.member_info.NickName">
