zoom and edit story

--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -122,28 +122,44 @@
             </div>
             <div class="row" if.bind="! user.editing" interact-draggable interact-dragend.delegate="shift_stories($event)" dir="auto">
                 <div class="col-md-3">
-                    <h4>${story_3.name}</h4>
+                    <h4 show.bind="story_3.name">
+                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3)">&nbsp;</i>
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, true)">&nbsp;</i>
+                        ${story_3.name}
+                    </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_3.story_text ">
                         </p>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <h4>${story_2.name}</h4>
+                    <h4 show.bind="story_2.name">
+                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2)">&nbsp;&nbsp;</i>
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, true)">&nbsp;</i>
+                        ${story_2.name}
+                    </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_2.story_text ">
                         </p>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <h4>${story_1.name}</h4>
+                    <h4 show.bind="story_1.name">
+                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1)">&nbsp;&nbsp;</i>
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, true)">&nbsp;</i>
+                        ${story_1.name}
+                    </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_1.story_text ">
                         </p>
                     </div>
                 </div>
                 <div class="col-md-3" style="padding-left:10px;">
-                    <h4>${story_0.name}</h4>
+                    <h4 show.bind="story_0.name">
+                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0)">&nbsp;&nbsp;</i>
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, true)">&nbsp;</i>
+                        ${story_0.name}
+                    </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_0.story_text ">
                         </p>
@@ -186,6 +202,10 @@
             overflow: auto;
             border-left: 1px solid gray;
             min-height: 200px;
+        }
+
+        i.is-link {
+            cursor: pointer;
         }
     </style>
 </template>
