--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -103,10 +103,15 @@
                 </div>
                 <div class="col-md-6">
                     <div class="row" if.bind="user.editing">
-                        <h3>${'members.life-summary' & t}</h3>
+                        <h3> 
+                            ${'members.life-summary' & t}
+                        </h3>
                     </div>
-                    <div class="row" if.bind="!user.editing && member.story_info.story_text && member.story_info.story_text.length > 0" style="padding-right: 0;">
-                        <h3>${'members.life-summary' & t}</h3>
+                    <div class="row fr-view" if.bind="!user.editing && member.story_info.story_text && member.story_info.story_text.length > 0" style="padding-right: 0;">
+                        <h3>
+                            <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(member.story_info)">&nbsp;</i>
+                            ${'members.life-summary' & t}
+                        </h3>
                         <p dir="rtl" style="overflow:auto;max-height: 200px;" innerhtml.bind="member.story_info.story_text">
                         </p>
                     </div>
@@ -120,7 +125,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" if.bind="! user.editing" interact-draggable interact-dragend.delegate="shift_stories($event)" dir="auto">
+            <div class="row fr-view" if.bind="! user.editing" interact-draggable interact-dragend.delegate="shift_stories($event)" dir="auto">
                 <div class="col-md-3">
                     <h4 show.bind="story_3.name">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3)">&nbsp;</i>
