--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -1,10 +1,10 @@
 <template>
 
-    <require from="font-awesome.css"></require>
+    <!--<require from="font-awesome.css"></require>
     <require from="froala-editor/css/froala_editor.pkgd.min.css"></require>
-    <require from="froala-editor/css/froala_style.min.css"></require>
+    <require from="froala-editor/css/froala_style.min.css"></require>-->
 
-    <div class="row" if.bind="!edit">
+    <div class="row fr-view" if.bind="!edit">
         <h2 dir="rtl">${story.name}</h2>
         <div class="big-story-panel">
             <p dir="rtl" innerhtml.bind="story.story_text ">
@@ -20,7 +20,7 @@
     </div>
 
     <h2 dir="rtl">${story.name}</h2>
-    <div class="big-story-panel">
+    <div class="big-story-panel fr-view">
         <froala-editor value.two-way="story.story_text" config.bind="{
                             toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
                                  'emoticons', 'color', 'fontSize', 'html'],
