start using sass

--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -1,4 +1,5 @@
 <template>
+    <require from="./members.css"></require>
     <div style="margin-top:50px" class="content-area">
         <div class="row" style="background-color:lightgrey;padding:10px;margin-bottom:15px;margin-right:0px;margin-left:0px;" <h3
             dir="rtl" style="float: right;margin:0px;">
@@ -178,41 +179,4 @@
     </div>
     </div>
 
-    <style>
-        div.slide-list {
-            margin-left: 0px;
-            margin-right: 0px;
-        }
-
-        ul.family li {
-            margin-left: 0px;
-        }
-
-        ul.family img {
-            height: 32px;
-            border-radius: 50%;
-        }
-
-        ul.family a {
-            position: relative;
-        }
-
-        ul.family span {
-            position: absolute;
-            top: 7px;
-            right: 34px;
-        }
-
-        div.story-panel {
-            max-height: 150px;
-            overflow: auto;
-            border-left: 1px solid gray;
-            min-height: 200px;
-        }
-
-        i.is-link {
-            cursor: pointer;
-        }
-
-    </style>
 </template>
