--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -1,5 +1,5 @@
 <template>
-
+    <require from="./members.css"></require>
     <div class="row" style="margin-bottom:20px;max-width:600px;">
         <div class="col-md-3">
             <!--a route-href="route: member-details; params.bind: {id:'new'}" class="btn btn-success cl-create-btn">
@@ -41,27 +41,5 @@
             </ul>
         </div>
     </div>
-
-    <style>
-        div.member-list li {
-            width: 65px;
-            float: right;
-            min-height: 88px;
-            max-height: 8px;
-            overflow: hidden;
-            font-size: 9px;
-            vertical-align: text-bottom;
-        }
-
-        ux-dialog-container.active>div {
-            background-color: lightgray;
-            margin-left: auto;
-            margin-right: auto;
-            width: 580px;
-            height: 500px;
-            margin-top: 200px;
-            margin-bottom: 200px;
-        }
-    </style>
 
 </template>
